--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="jar/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="jar/liblinear-java-1.95.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
